# a-blog-out-of-deep-space

./: .gitignore  Cargo.toml
.github/: dependabot.yml
.github/workflows/: test.yml
benches/: router.rs  server.rs
src/: extract.rs  file.rs  lib.rs  main.rs  middleware.rs  router.rs  util.rs
src/state/: dir.rs  file.rs  mod.rs
tests/: tests.rs
tests/assets/site/: 404.html  408.html  index.html  robots.txt  sitemap.xml
tests/assets/site/posts/: index.html
tests/assets/site/posts/hello-world/: index.html
