[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
brotli = "8.0.0"
dashmap = "6.1.0"
flate2 = "1.1.1"
mime = "0.3.17"
twox-hash = "2.1.0"
walkdir = "2.5.0"

[dependencies.tokio]
version = "1.44.2"
# TODO: slim down features
features = ["full"]

[dependencies.tower]
version = "0.5.2"
features = ["load-shed", "timeout"]

[dev-dependencies.insta]
version = "1.43.1"
features = ["ron"]

[dev-dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dev-dependencies.tower]
version = "0.5.2"
features = ["util"]

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
