[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"
publish = false
# TODO: what license to pick?

[dependencies]
axum = "0.8.4"
brotli = "8.0.1"
dashmap = "6.1.0"
flate2 = "1.1.1"
mime = "0.3.17"
pin-project-lite = "0.2.16"
twox-hash = "2.1.0"
walkdir = "2.5.0"

[dependencies.bincode]
version = "2.0.1"
features = ["serde"]

[dependencies.flume]
version = "0.11.1"
default-features = false
features = ["async"]

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.45.1"
features = ["fs", "macros", "rt-multi-thread"]

[dependencies.tower]
version = "0.5.2"
features = ["load-shed", "timeout"]

[dev-dependencies.insta]
version = "1.43.1"
features = ["ron"]

[dev-dependencies.tower]
version = "0.5.2"
features = ["util"]

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
