[package]
name = "a-blog-out-of-deep-space"
version = "0.1.0"
edition = "2024"
publish = false
# TODO: what license to pick?

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1

[[bench]]
name = "router"
harness = false

[dependencies]
brotli = "8.0.2"
flate2 = "1.1.2"
mime = "0.3.17"
pin-project-lite = "0.2.16"
tracing = "0.1.41"
walkdir = "2.5.0"

[dependencies.axum]
version = "0.8.6"
default-features = false
features = ["http1", "tokio"]

[dependencies.flume]
version = "0.11.1"
default-features = false
features = ["async"]

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["std"]

[dependencies.tokio]
version = "1.47.1"
features = ["fs", "macros", "rt-multi-thread"]

[dependencies.tower]
version = "0.5.2"
features = ["load-shed", "timeout"]

[dependencies.twox-hash]
version = "2.1.2"
default-features = false
features = ["std", "xxhash64"]

[dev-dependencies]
insta = "1.43.2"

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]

[dev-dependencies.divan]
version = "0.1.21"
default-features = false

[dev-dependencies.tower]
version = "0.5.2"
features = ["util"]
